[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Player Red/playerRed_walk3.png" type="Texture" id=1]
[ext_resource path="res://Player2.gd" type="Script" id=2]
[ext_resource path="res://assets/Player Red/playerRed_walk2.png" type="Texture" id=3]
[ext_resource path="res://assets/Player Red/playerRed_walk1.png" type="Texture" id=4]
[ext_resource path="res://p2_capsule.tres" type="Shape2D" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Player2" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.56091, -2.02455 )
shape = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 1.25, 1.25 )

[node name="UpLeft" type="RayCast2D" parent="."]
position = Vector2( -25, 0 )
enabled = true
cast_to = Vector2( 0, -64 )

[node name="UpRight" type="RayCast2D" parent="."]
position = Vector2( 25, 0 )
enabled = true
cast_to = Vector2( 0, -64 )

[node name="WallRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="WallLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )
